force-app/main/default/objects/Critical_Date__c/Critical_Date__c.object-meta.xml
<CustomObject>
    <description>Minimal stub for a key date tracked against a deal Transaction (acquisitions/transactions module). Created so TestDataFactory compiles; full field set is out of scope for the IR module.</description>
    <label>Critical Date</label>
    <nameField>
        <label>Critical Date Number</label>
        <type>AutoNumber</type>
        <displayFormat>CD-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Critical Dates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>