force-app/main/default/objects/Critical_Date__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <description>The calendar date for this critical date entry. Stub field; nullable.</description>
    <inlineHelpText>Enter the calendar date this critical date occurs on.</inlineHelpText>
    <type>Date</type>
</CustomField>