force-app/main/default/objects/Critical_Date__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <label>Date Type</label>
    <description>The kind of critical date being tracked (e.g. Closing Date, Feasibility End). Stored as free Text in this stub so any value set by TestDataFactory is accepted without a restricted picklist.</description>
    <inlineHelpText>Enter the type of critical date, such as Closing Date or Feasibility End.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>