force-app/main/default/objects/Critical_Date__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <description>Optional link to the deal Transaction this critical date belongs to. Stub field; nullable.</description>
    <inlineHelpText>Select the transaction this critical date applies to, if applicable.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Critical Dates</relationshipLabel>
    <relationshipName>Critical_Dates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>